--- a/comfy.css
+++ b/comfy.css
@@ -658,21 +658,21 @@
   transition: 250ms;
   background-color: transparent;
 }
-:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef) .searchBar_a46bef .iconContainer_effbe2 {
+:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef) .searchBar_a46bef .iconContainer_d8bfb3 {
   transform: scale(1.3);
   transition: 250ms;
 }
-:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef) .searchBar_a46bef .iconContainer_effbe2 .icon_effbe2 {
+:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef) .searchBar_a46bef .iconContainer_d8bfb3 .icon_d8bfb3 {
   color: var(--interactive-normal);
 }
 :root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef {
   width: 220px;
   background-color: var(--background-tertiary);
 }
-:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef .iconContainer_effbe2 {
+:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef .iconContainer_d8bfb3 {
   transform: scale(1);
 }
-:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef .iconContainer_effbe2 .icon_effbe2 {
+:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef .iconContainer_d8bfb3 .icon_d8bfb3 {
   color: var(--text-muted);
 }
 :root .container_e44302.themed_e44302 .search_ff5f90 .searchAnswer_b0fa94,
