--- a/comfy.css
+++ b/comfy.css
@@ -2,6 +2,39 @@
 :root .buttons_d5deea {
   transition: opacity 150ms;
 }
+:root .panels_a4d4d9 > .container_b2ca13 > .avatarWrapper_b2ca13 {
+  position: fixed;
+  bottom: 26.5px;
+  left: 327.5px;
+  z-index: 2;
+  margin: 0;
+  padding: 0;
+  min-width: unset;
+}
+:root .panels_a4d4d9 > .container_b2ca13 > .avatarWrapper_b2ca13 > .avatar_b2ca13 {
+  width: 40px !important;
+  height: 40px !important;
+}
+:root .panels_a4d4d9 > .container_b2ca13 > .avatarWrapper_b2ca13 > .avatar_b2ca13 > svg {
+  contain: unset;
+}
+:root .panels_a4d4d9 > .container_b2ca13 > .avatarWrapper_b2ca13 > .avatar_b2ca13 foreignObject {
+  width: 100% !important;
+  height: 100% !important;
+}
+:root .panels_a4d4d9 > .container_b2ca13 > .avatarWrapper_b2ca13 > .avatar_b2ca13 .pointerEvents_c51b4e {
+  x: 31px;
+  y: 31px;
+  ry: var(--status-radius);
+  width: 12px;
+  height: 12px;
+}
+:root .panels_a4d4d9 > .container_b2ca13 > .avatarWrapper_b2ca13 > .avatar_b2ca13:hover {
+  opacity: 1;
+}
+:root .panels_a4d4d9 > .container_b2ca13 > .avatarWrapper_b2ca13 > .avatar_b2ca13 + .nameTag_b2ca13 {
+  display: none;
+}
 :root .content_a4d4d9 > :nth-child(2):not(.chat_a7d72e),
 :root .callContainer_ed4410,
 :root .gatedContent_b9693a,
@@ -15,6 +48,23 @@
 }
 :root .chat_a7d72e > .content_a7d72e > .container_a6d69a > .list_a6d69a[data-list-id^=forum-channel-list] {
   background-color: var(--background-primary);
+}
+:root .chat_a7d72e .form_a7d72e {
+  padding-left: 66px;
+}
+:root .chat_a7d72e .form_a7d72e .wrapper_faf5ab {
+  z-index: unset;
+}
+:root .chat_a7d72e .form_a7d72e .channelTextArea_a7d72e .scrollableContainer_d0696b::after,
+:root .chat_a7d72e .form_a7d72e .wrapper_faf5ab::after {
+  position: absolute;
+  content: "";
+  bottom: 2px;
+  left: -50px;
+  width: 40px;
+  height: 40px;
+  background-color: var(--background-secondary);
+  border-radius: calc(var(--avatar-radius) + 2px);
 }
 :root .typing_d7ebeb {
   left: 66px;
@@ -338,6 +388,22 @@
 :root .panels_a4d4d9 {
   z-index: 2;
 }
+:root .panels_a4d4d9 > .container_b2ca13 {
+  height: 0;
+}
+:root .panels_a4d4d9 > .container_b2ca13 > .flex_bba380 {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 72px;
+  padding: 20px 0 10px 0;
+  flex-direction: column;
+  background: linear-gradient(transparent, var(--background-tertiary) 15%);
+}
+:root .panels_a4d4d9 > .container_b2ca13 > .flex_bba380 > .button_f67531 {
+  color: var(--user-buttons-color);
+  margin: var(--user-buttons-spacing) auto 0 auto;
+}
 :root .inner-1ilYF7 > .modal_ec75c1 > .header_f9a4c9,
 :root .modal_ec75c1,
 :root .inner-1ilYF7 > .modal_ec75c1 > .scrollerBase_eed6a8 {
@@ -658,21 +724,21 @@
   transition: 250ms;
   background-color: transparent;
 }
-:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef) .searchBar_a46bef .iconContainer_d8bfb3 {
+:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef) .searchBar_a46bef .iconContainer_effbe2 {
   transform: scale(1.3);
   transition: 250ms;
 }
-:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef) .searchBar_a46bef .iconContainer_d8bfb3 .icon_d8bfb3 {
+:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef) .searchBar_a46bef .iconContainer_effbe2 .icon_effbe2 {
   color: var(--interactive-normal);
 }
 :root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef {
   width: 220px;
   background-color: var(--background-tertiary);
 }
-:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef .iconContainer_d8bfb3 {
+:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef .iconContainer_effbe2 {
   transform: scale(1);
 }
-:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef .iconContainer_d8bfb3 .icon_d8bfb3 {
+:root .container_e44302.themed_e44302 .search_ff5f90 .search_a46bef:not(.open_a46bef):hover .searchBar_a46bef .iconContainer_effbe2 .icon_effbe2 {
   color: var(--text-muted);
 }
 :root .container_e44302.themed_e44302 .search_ff5f90 .searchAnswer_b0fa94,
@@ -1230,6 +1296,19 @@
 }
 :root .contentColumn_c25c6d,
 :root .customColumn_c25c6d,
+:root .sidebarScrollable_e9196a + .content_e9196a,
+:root .customScroller_c25c6d > div {
+  max-width: 95%;
+}
+:root .sidebar_c25c6d {
+  padding: 60px 0 35px 65px;
+  width: 285px;
+}
+:root .sidebar_c25c6d > div > .item_a0,
+:root #bd-settings-sidebar .ui-tab-bar-item {
+  padding: 8px 0 8px 10px;
+  border-radius: 5px 0 0 5px;
+}
 :root .closeButton_df5532 {
   border-radius: 5px;
 }
@@ -1463,6 +1542,82 @@
 }
 :root .roleRow_a930f1::before {
   display: none;
+}
+:root .sidebar_e87574 {
+  border: none;
+}
+:root .sidebar_e87574 .list_e87574 {
+  padding: 0 20px;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  border-radius: 0;
+}
+:root .sidebar_e87574 .list_e87574 .role_e4010c {
+  border-radius: 5px;
+  margin-bottom: 6px;
+  padding-left: 20px;
+}
+:root .sidebar_e87574 .list_e87574 .role_e4010c .roleCircle_a26d7b {
+  width: 0;
+  margin: 0;
+}
+:root .sidebar_e87574 .list_e87574 .role_e4010c .roleCircle_a26d7b::before {
+  position: absolute;
+  border-radius: 5px;
+  content: "";
+  top: 0;
+  left: 8px;
+  width: calc(100% - 8px);
+  height: 100%;
+  background: inherit;
+  opacity: 0.2;
+  z-index: -1;
+  transition: opacity 200ms;
+}
+:root .sidebar_e87574 .list_e87574 .role_e4010c .roleName-3910zV {
+  margin-left: 0;
+}
+:root .sidebar_e87574 .item_a0:hover:not(.disabled_a0),
+:root .sidebar_e87574 .topPill-3DJJNV .item_a0:hover:not(.disabled_a0),
+:root .sidebar_e87574 .selected_a0.item_a0,
+:root .sidebar_e87574 .topPill-3DJJNV .selected_a0.item_a0 {
+  background: none;
+}
+:root .sidebar_e87574 .item_a0:hover:not(.disabled_a0) .roleCircle_a26d7b::after,
+:root .sidebar_e87574 .topPill-3DJJNV .item_a0:hover:not(.disabled_a0) .roleCircle_a26d7b::after,
+:root .sidebar_e87574 .selected_a0.item_a0 .roleCircle_a26d7b::after,
+:root .sidebar_e87574 .topPill-3DJJNV .selected_a0.item_a0 .roleCircle_a26d7b::after {
+  position: absolute;
+  border-radius: 3px;
+  content: "";
+  top: 0.5px;
+  bottom: 0.5px;
+  left: -3px;
+  width: 8px;
+  background: inherit;
+  z-index: -1;
+  transition: opacity 200ms;
+}
+:root .sidebar_e87574 .item_a0:hover:not(.disabled_a0),
+:root .sidebar_e87574 .topPill-3DJJNV .item_a0:hover:not(.disabled_a0) {
+  background: none;
+}
+:root .sidebar_e87574 .item_a0:hover:not(.disabled_a0) .roleCircle_a26d7b::before,
+:root .sidebar_e87574 .item_a0:hover:not(.disabled_a0) .roleCircle_a26d7b::after,
+:root .sidebar_e87574 .topPill-3DJJNV .item_a0:hover:not(.disabled_a0) .roleCircle_a26d7b::before,
+:root .sidebar_e87574 .topPill-3DJJNV .item_a0:hover:not(.disabled_a0) .roleCircle_a26d7b::after {
+  opacity: 0.3;
+}
+:root .sidebar_e87574 .selected_a0.item_a0,
+:root .sidebar_e87574 .topPill-3DJJNV .selected_a0.item_a0 {
+  background: none;
+}
+:root .sidebar_e87574 .selected_a0.item_a0 .roleCircle_a26d7b::before,
+:root .sidebar_e87574 .selected_a0.item_a0 .roleCircle_a26d7b::after,
+:root .sidebar_e87574 .topPill-3DJJNV .selected_a0.item_a0 .roleCircle_a26d7b::before,
+:root .sidebar_e87574 .topPill-3DJJNV .selected_a0.item_a0 .roleCircle_a26d7b::after {
+  opacity: 0.5 !important;
 }
 :root .contentWidth_bd05f1 {
   max-width: unset;
@@ -2288,6 +2443,9 @@
 }
 :root .container_a6d69a .mainCard_a6d69a {
   background-color: var(--background-secondary);
+}
+:root .bd-sidebar-header {
+  padding-right: 10px;
 }
 :root .bd-addon-list.bd-grid-view {
   grid-template-columns: 1fr 1fr;
