--- a/comfy_updated.css
+++ b/comfy_updated.css
@@ -1516,7 +1516,7 @@
     flex: 1 1 100%;
 }
 
-:root .contentColumn_c25c6d,
+:root .contentColumn__23e6b,
 :root .customColumn_c25c6d,
 :root .sidebarScrollable_e9196a+.content_e9196a,
 :root .customScroller_c25c6d>div {
